--- a/hypr/window-rules.conf
+++ b/hypr/window-rules.conf
@@ -1,14 +1,25 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+# Steam
+windowrulev2 = workspace 8, title:^(Steam)$,class:^(steam)$
 
 # Fix menus on steam
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 
-# Blanket
-windowrulev2 = workspace 8, float, title:^(Blanket)$, class:^(com.rafaelmardojai.Blanket)$
-windowrulev2 = float, title:^(Blanket)$, class:^(com.rafaelmardojai.Blanket)$
+# Thunderbird
+windowrulev2 = workspace 9, class:^(org.mozilla.Thunderbird)$
+
+# Pomodoro, noise and system resources
+windowrulev2 = workspace 8, title:^(Blanket)$, class:^(com.rafaelmardojai.Blanket)$
+windowrulev2 = workspace 8, title:^(Mission Center)$, class:^(io.missioncenter.MissionCenter)$
+windowrulev2 = workspace 8, title:^(Pomodoro)$, class:^(io.gitlab.idevecore.Pomodoro)$
+
+# Pavucontrol
+windowrulev2 = float, title:^(Volume Control)$, class:^(pavucontrol)$
+
+# KDE Polkit dialog
+windowrulev2 = float, title:(PolicyKit1 KDE Agent)$, class:^(org.kde.polkit-kde-authentication-agent-1)$
