--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -35,6 +35,6 @@ background_opacity 0.97
 include keybindings.conf
 
 # BEGIN_KITTY_THEME
-# Rosé Pine
+# Tokyo Night Day
 include current-theme.conf
 # END_KITTY_THEME
