--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,36 +11,13 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=DP-3,1920x1080@75.00000,0x0,1
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+# Set enviroment variables
+source = ./env-vars.conf
 
-# Some default env vars.
-env = XCURSOR_SIZE,24
-env = XDG_CONFIG_HOME,/home/javier/.config/
-
-# Load ssh keys
-# exec-once=eval `ssh-agent -s`
-
-# Set wallpaper
-exec-once=swaybg -i ~/Pictures/Wallpapers/Draw/Anime/anime_room.png -m center
-
-exec-once=/usr/libexec/kf5/polkit-kde-authentication-agent-1
-
-# Launch waybar
-exec-once=waybar
-
-# Set up Night light
-exec-once=wlsunset -S 7:30 -s 18:00 -t 4500 -d 1800
-
-# Launch background process for PikaBackup
-exec-once=flatpak run --command=pika-backup-monitor org.gnome.World.PikaBackup
-
-# Launch background process for dunst (Notifications)
-exec-once=dunst
-
-# Idle control
-exec-once=swayidle -w timeout 300 'swaylock -f -c 000000' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
+# Autostart applications
+source = ./autostart.conf
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -125,6 +102,7 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     disable_hyprland_logo = true
+    focus_on_activate = false
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
@@ -146,12 +124,17 @@ bind = $mainMod SHIFT, i, exec, firefox
 bind = $mainMod SHIFT, f, exec, nautilus
 bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod SHIFT, space, togglefloating, 
+bind = $mainMod, space, focuswindow, floating
+bind = $mainMod, f, workspaceopt, allfloat
 bind = $mainMod, m, fullscreen, 1
-bind = $mainMod, p, exec, wofi --show drun
+bind = $mainMod, p, exec, j4-dmenu-desktop --dmenu="bemenu -i"
 bind = $mainMod, Return, layoutmsg, swapwithmaster master
 bind = $mainMod, Tab, layoutmsg, swapwithmaster master
+# bind = $mainMod, e, pseudo, # dwindle
+# bind = $mainMod, o, togglesplit, # dwindle
 
-# dwm like window movement
+
+# Move focus with mainMod + arrow keys
 bind = $mainMod, j, layoutmsg, cyclenext
 bind = $mainMod, k, layoutmsg, cycleprev
 bind = $mainMod, d, layoutmsg, removemaster
@@ -186,9 +169,10 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Media controls
-bind = $mainMod, F6, exec, pamixer --toggle-mute
-bind = $mainMod, F7, exec, pamixer --decrease 5
-bind = $mainMod, F8, exec, pamixer --increase 5
+bind = $mainMod SHIFT, F6, exec, ~/.config/local/bin/pick-audio-sink.pl
+bind = $mainMod, F6, exec, ~/.config/local/bin/toggle-mute
+bind = $mainMod, F7, exec, ~/.config/local/bin/change-volume -5
+bind = $mainMod, F8, exec, ~/.config/local/bin/change-volume +5
 bind = $mainMod, F9, exec, playerctl previous
 bind = $mainMod, F10, exec, playerctl play-pause
 bind = $mainMod, F11, exec, playerctl next
@@ -203,8 +187,8 @@ bind = CTRL ALT, p, exec, ~/.config/local/bin/powermenu
 bind = , Print, exec, grim -g "$(slurp)"
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, workspace, e-1
+bind = $mainMod, mouse_up, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
