--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,53 +1,44 @@
-## name: Rosé Pine
-## author: mvllow
+# vim:ft=kitty
+
+## name: Tokyo Night Day
 ## license: MIT
-## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine.conf
-## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty_tokyonight_day.conf
 
-foreground               #e0def4
-background               #191724
-selection_foreground     #e0def4
-selection_background     #403d52
+background #e1e2e7
+foreground #3760bf
+selection_background #99a7df
+selection_foreground #3760bf
+url_color #387068
+cursor #3760bf
 
-cursor                   #524f67
-cursor_text_color        #e0def4
+# Tabs
+active_tab_background #2e7de9
+active_tab_foreground #d4d6e4
+inactive_tab_background #c4c8da
+inactive_tab_foreground #8990b3
+#tab_bar_background #e9e9ed
 
-url_color                #c4a7e7
+# normal
+color0 #e9e9ed
+color1 #f52a65
+color2 #587539
+color3 #8c6c3e
+color4 #2e7de9
+color5 #9854f1
+color6 #007197
+color7 #6172b0
 
-active_tab_foreground    #e0def4
-active_tab_background    #26233a
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #191724
+# bright
+color8 #a1a6c5
+color9 #f52a65
+color10 #587539
+color11 #8c6c3e
+color12 #2e7de9
+color13 #9854f1
+color14 #007197
+color15 #3760bf
 
-# black
-color0   #26233a
-color8   #6e6a86
-
-# red
-color1   #eb6f92
-color9   #eb6f92
-
-# green
-color2   #31748f
-color10  #31748f
-
-# yellow
-color3   #f6c177
-color11  #f6c177
-
-# blue
-color4   #9ccfd8
-color12  #9ccfd8
-
-# magenta
-color5   #c4a7e7
-color13  #c4a7e7
-
-# cyan
-color6   #ebbcba
-color14  #ebbcba
-
-# white
-color7   #e0def4
-color15  #e0def4
-
+# extended colors
+color16 #b15c00
+color17 #c64343
